--- a/views/about.html
+++ b/views/about.html
@@ -11,12 +11,64 @@
 {% endblock %}
 
 {% block mainContent %}
+
+  <div class="big-section" id="how-we-work">
+    <div class="container">
+      <div class="row header">
+        <div class="col-md-8 col-md-offset-2 text-center">
+          <h1>How We Work</h1>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          <ol>
+            <li>
+              You <a href="/#form-section">tell us what you need</a>.
+            </li>
+            <li>
+              We'll triage your request and respond ASAP.
+            </li>
+            <li>
+              If we can accommodate your request, here is <a href="https://mofocomms.etherpad.mozilla.org/ProjectProcess?">the process we'll use</a>.
+            </li>
+            <li>
+              We'll have a consultation meeting and fill out <a href="https://mofocomms.etherpad.mozilla.org/ProjectScopeTemplate">this scoping form</a> together.
+            </li>
+            <li>
+              Bugs will be filed. Progress will be tracked through hilarious gifs.
+            </li>
+            <li>
+              Voilà! Your request will be fulfilled and may grace the pages of <a href="/projects#portfolio">our portfolio</a>.
+            </li>
+          </ol>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-3 col-md-offset-3 text-center">
+          <p>
+            <i class="fa fa-file-text-o"></i>
+            <a href="https://mofocomms.etherpad.mozilla.org/ProjectProcess">Project Process</a>
+          </p>
+        </div>
+        <div class="col-md-3 text-center">
+          <p>
+            <i class="fa fa-file-text-o"></i>
+            <a href="https://mofocomms.etherpad.mozilla.org/ProjectProcessTemplate"> Project Process Template</a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
   <div id="who-are-we" class="big-section">
     <div class="container">
       <div class="row header">
         <div class="col-md-8 col-md-offset-2 text-center">
-          <h2>Who We Are</h2>
-          <p>We are Studio MoFo.  A trio that drafts, designs, and develops for the Mozilla Foundation.</p>
+          <h1>Who We Are</h1>
+          <h2>Studio Mofo is a 3-person writing, design and dev team that lives within the Mozilla Foundation Engagement Team.</h2>
         </div>
       </div>
     </div>
@@ -24,7 +76,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h2 class="name">Erika Drushka</h2>
+            <div class="avatar"><img src="img/erika.jpg" alt="Photo of Erika Drushka"></div>
+            <h1 class="name">Erika Drushka</h1>
             <p class="title">Copywriter</p>
           </div>
         </div>
@@ -34,7 +87,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h2 class="name">Sabrina Ng</h2>
+            <div class="avatar"><img src="img/sabrina.jpg" alt="Photo of Sabrina Ng"></div>
+            <h1 class="name">Sabrina Ng</h1>
             <p class="title">Designer</p>
           </div>
         </div>
@@ -44,33 +98,10 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h2 class="name">Mavis Ou</h2>
+            <div class="avatar"><img src="img/mavis.jpg" alt="Photo of Mavis Ou"></div>
+            <h1 class="name">Mavis Ou</h1>
             <p class="title">Developer</p>
           </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="big-section">
-    <div class="container">
-      <div class="row header">
-        <div class="col-md-8 col-md-offset-2 text-center">
-          <h2>What We Do</h2>
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 text-center">
-          <p>
-            <a href="https://mofocomms.etherpad.mozilla.org/ProjectProcess">ProjectProcess</a>
-          </p>
-        </div>
-        <div class="col-md-6 text-center">
-          <p>
-            <a href="https://mofocomms.etherpad.mozilla.org/ProjectProcessTemplate"> ProjectProcessTemplate</a>
-          </p>
         </div>
       </div>
     </div>
