--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-8 col-md-offset-2 text-center">
-        <p>We help plan communications, websites, graphics, and other engagement projects for the Mozilla Foundation.</p>
+        <p>We draft, design and develop graphic assets, websites and engagement strategies for the Mozilla Foundation. <a href="#form-section">Tell us what you need.</a></p>
       </div>
     </div>
   </div>
@@ -21,7 +21,7 @@
         <div class="col-md-12">
           <div class="row">
             <div class="col-md-8 col-md-offset-2">
-              <h2 class="text-center">Foundation Calendar</h2>
+              <h1 class="text-center">MoFo 2014 Engagement Calendar</h1>
             </div>
           </div>
           <div class="row">
@@ -37,7 +37,7 @@
                 </li>
                 <li>
                   <span class="tier-number tier-3">Tier 3:</span>
-                  All-Foundation Audiences via our networks, social media and email lists.
+                  All Foundation audiences via our networks, social media and email lists.
                 </li>
                 <li>
                   <span class="tier-number tier-4">Tier 4:</span>
@@ -54,6 +54,10 @@
         <div id="description-box">
           <h4 id="event-title"></h4>
           <ul id="event-details">
+            <li><i class="fa fa-arrow-right fa-5"></i></li>
+            <li>Click on the dots to read more information about each event.</li>
+            <li>Expand or minimize each engagement tier by clicking the tier number in the first column.</li>
+            <li>To add your event to this calendar, <a href="mailto: hannah@mozillafoundation.org">email Hannah Kane</a>.</li>
           </ul>
         </div>
       </div>
@@ -87,8 +91,8 @@
     <div class="container">
       <div class="row header">
         <div class="col-md-8 col-md-offset-2 text-center">
-          <h2>Service Request</h2>
-          <h3>Tell us what you need.</h3>
+          <h1>Project Request Form</h1>
+          <h2>Tell us what you need.</h2>
         </div>
       </div>
       <div class="row">
