--- a/views/layout.html
+++ b/views/layout.html
@@ -39,6 +39,18 @@
   </main>
   <footer>
     <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <div id="mozilla-wordmark">
+            <img src="img/mozilla_wordmark_white.png" alt="Mozilla wordmark" />
+          </div>
+        </div>
+        <div class="col-md-8">
+          <div id="note">
+            made with <i class="fa fa-heart f3"></i> by Studio Mofo
+          </div>
+        </div>
+      </div>
     </div>
   </footer>
 
