--- a/views/projects.html
+++ b/views/projects.html
@@ -15,8 +15,8 @@
   <div class="big-section" id="bug-list">
     <div class="row header">
       <div class="col-md-8 col-md-offset-2 text-center">
-        <h2>What We're Working On</h2>
-        <p>We have helped teams across the Foundation produce websites and print assets fro their projects and initiatives.</p>
+        <h1>We've Got Bugs</h1>
+        <h2>Here's what we have on our plate at the moment.</h2>
       </div>
     </div>
     <div class="container">
@@ -37,58 +37,106 @@
     </div>
   </div>
 
-  <div class="big-section" id="past-projects">
+  <div class="big-section" id="portfolio">
     <div class="row header">
       <div class="col-md-8 col-md-offset-2 text-center">
-        <h2>What We Made</h2>
-        <p>We have helped teams across the Foundation produce websites and print assets fro their projects and initiatives.</p>
+        <h1>We Made This!</h1>
+        <h2>Please take a peek at some of the projects we've recently completed.</h2>
       </div>
     </div>
     <div class="container">
       <div class="row project">
         <div class="col-md-3">
           <div class="thumbnail">
-            <img src="" alt="">
+            <a href="http://party.webmaker.org/">
+              <img src="img/portfolio/MakerPartySavetheDate_Website.jpg" alt="Maker Party site thumbnail">
+            </a>
           </div>
           <div class="title">
-            <h4>Appmaker Website</h4>
-            <p></p>
+            <a href="http://party.webmaker.org/">
+              <h4>Maker Party site</h4>
+            </a>
+            <p>design & build</p>
           </div>
         </div>
         <div class="col-md-3">
           <div class="thumbnail">
-            <img src="" alt="">
+            <a href="http://www.mozilla.org/en-US/gigabit/">
+              <img src="" alt="">
+            </a>
           </div>
           <div class="title">
-            <h4>Appmaker Website</h4>
-            <p></p>
+            <a href="http://www.mozilla.org/en-US/gigabit/">
+              <h4>Gigabit site</h4>
+            </a>
+            <p>design & build</p>
           </div>
-        </div><div class="col-md-3">
+        </div>
+        <div class="col-md-3">
           <div class="thumbnail">
-            <img src="" alt="">
+            <a href="https://appmaker.mozillalabs.com/">
+              <img src="img/portfolio/Appmaker_Website.jpg" alt="Appmaker site thumbnail">
+            </a>
           </div>
           <div class="title">
-            <h4>Appmaker Website</h4>
-            <p></p>
+            <a href="https://appmaker.mozillalabs.com/">
+              <h4>Appmaker site</h4>
+            </a>
+            <p>design & build</p>
           </div>
-        </div><div class="col-md-3">
+        </div>
+        <div class="col-md-3">
           <div class="thumbnail">
-            <img src="" alt="">
+            <a href="https://bug965980.bugzilla.mozilla.org/attachment.cgi?id=8378651">
+              <img src="" alt="">
+            </a>
           </div>
           <div class="title">
-            <h4>Appmaker Website</h4>
-            <p></p>
+            <a href="https://bug965980.bugzilla.mozilla.org/attachment.cgi?id=8378651">
+              <h4>DML printed banner</h4>
+            </a>
+            <p>design</p>
           </div>
         </div>
       </div>
       <div class="row project">
         <div class="col-md-3">
           <div class="thumbnail">
-            <img src="" alt="">
+            <a href="https://www.dropbox.com/s/hgioyviohtn4cur/sciencelab_softwarecarpentry_postcard_v2.pdf">
+              <img src="" alt="">
+            </a>
           </div>
           <div class="title">
-            <h4>Appmaker Website</h4>
-            <p></p>
+            <a href="https://www.dropbox.com/s/hgioyviohtn4cur/sciencelab_softwarecarpentry_postcard_v2.pdf">
+              <h4>Science Lab postcard design</h4>
+            </a>
+            <p>design</p>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="thumbnail">
+            <a href="/#viz-section">
+              <img src="" alt="">
+            </a>
+          </div>
+          <div class="title">
+            <a href="/#viz-section">
+              <h4>Engagement calendar app</h4>
+            </a>
+            <p>design & build</p>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="thumbnail">
+            <a href="https://www.dropbox.com/sh/ar62saes1gwjlk3/VI60iwBF5h/Badgekit_FAQ_Print_nobleedsinglepage_v2.pdf">
+              <img src="" alt="">
+            </a>
+          </div>
+          <div class="title">
+            <a href="https://www.dropbox.com/sh/ar62saes1gwjlk3/VI60iwBF5h/Badgekit_FAQ_Print_nobleedsinglepage_v2.pdf">
+              <h4>BadgeKit printed FAQ</h4>
+            </a>
+            <p>design</p>
           </div>
         </div>
         <div class="col-md-3">
@@ -96,23 +144,7 @@
             <img src="" alt="">
           </div>
           <div class="title">
-            <h4>Appmaker Website</h4>
-            <p></p>
-          </div>
-        </div><div class="col-md-3">
-          <div class="thumbnail">
-            <img src="" alt="">
-          </div>
-          <div class="title">
-            <h4>Appmaker Website</h4>
-            <p></p>
-          </div>
-        </div><div class="col-md-3">
-          <div class="thumbnail">
-            <img src="" alt="">
-          </div>
-          <div class="title">
-            <h4>Appmaker Website</h4>
+            <h4></h4>
             <p></p>
           </div>
         </div>
