--- a/views/resources.html
+++ b/views/resources.html
@@ -12,12 +12,12 @@
 
 {% block mainContent %}
 
-  <div class="big-section">
+  <div class="big-section" id="resources-section">
     <div class="container">
       <div class="row header">
         <div class="col-md-8 col-md-offset-2 text-center">
-          <h2>Resources</h2>
-          <p>We will showcase some helpful resources that will help you draft, design and develop your projects.</p>
+          <h1>Resources</h1>
+          <h2>Here are some tools to improve your engagement strategies.</h2>
         </div>
       </div>
     </div>
@@ -25,10 +25,18 @@
       <div class="row">
         <div class="col-md-4 col-md-offset-4 text-center">
           <p>
+            <i class="fa fa-file-text-o"></i>
             <a href="https://wiki.mozilla.org/Encyclopedia_Bestpractica">Encyclopedia Bestpractica</a>
           </p>
           <p>
             A comprehensive guide to the Mozilla Foundation's best practices for communications and engagement.
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4 col-md-offset-4 text-center">
+          <p>
+            More coming...one day.
           </p>
         </div>
       </div>
