--- a/public/less/font.less
+++ b/public/less/font.less
@@ -1,4 +1,8 @@
-@font-face {
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300);
+@import url(http://fonts.googleapis.com/css?family=Montserrat);
+
+/*@font-face {
   font-family: 'Open Sans Light';
   font-style: italic;
   font-weight: 400;
@@ -25,3 +29,4 @@
   font-weight: 400;
   src: url('/fonts/Playball-Regular.ttf') format('truetype')
 }
+*/
