--- a/views/about.html
+++ b/views/about.html
@@ -74,18 +74,25 @@
     </div>
     <div class="member">
       <div class="container">
-        <div class="row">
+        <div class="row intro">
           <div class="col-md-12">
             <div class="avatar"><img src="img/erika.jpg" alt="Photo of Erika Drushka"></div>
             <h1 class="name">Erika Drushka</h1>
             <p class="title">Copywriter</p>
           </div>
         </div>
+        <div class="row favourite">
+          <div class="col-md-6 col-md-offset-3">
+             <p>
+              Here is Erika's <a href="https://www.dropbox.com/s/b7syopbaz3apvba/hello.jpg">very favourite picture</a>. She can't watch <a href="http://vimeo.com/31158841">this video of birds</a> without choking up just a little. And she has passed many pleasant hours with <a href="http://tonematrix.audiotool.com/">this music maker</a>. Enjoy!
+            </p>
+          </div>
+        </div>
       </div>
     </div>
     <div class="member">
       <div class="container">
-        <div class="row">
+        <div class="row intro">
           <div class="col-md-12">
             <div class="avatar"><img src="img/sabrina.jpg" alt="Photo of Sabrina Ng"></div>
             <h1 class="name">Sabrina Ng</h1>
@@ -96,11 +103,18 @@
     </div>
     <div class="member">
       <div class="container">
-        <div class="row">
+        <div class="row intro">
           <div class="col-md-12">
             <div class="avatar"><img src="img/mavis.jpg" alt="Photo of Mavis Ou"></div>
             <h1 class="name">Mavis Ou</h1>
             <p class="title">Developer</p>
+          </div>
+        </div>
+        <div class="row favourite">
+          <div class="col-md-6 col-md-offset-3">
+            <p>
+              This is Mavis's <a href="https://www.youtube.com/watch?v=9gPktcV0A-g">favourite prank video</a>.  It's not hard to tell what her <a href="">favourite colour shades</a> are. [ one more sentence to come ]
+            </p>
           </div>
         </div>
       </div>
