--- a/public/less/style.less
+++ b/public/less/style.less
@@ -240,11 +240,11 @@ nav#studiomofo-nav {
   }
 }
 
-#who-are-we.big-section {
+#who-we-are.big-section {
   padding-bottom: 0;
 }
 
-#who-are-we {
+#who-we-are {
   .member .row {
     margin-top: 0;
     margin-bottom: 0;
