--- a/views/about.html
+++ b/views/about.html
@@ -63,7 +63,7 @@
   </div>
 
 
-  <div id="who-are-we" class="big-section">
+  <div id="who-we-are" class="big-section">
     <div class="container">
       <div class="row header">
         <div class="col-md-8 col-md-offset-2 text-center">
