Add mavis's favourites

--- a/views/about.html
+++ b/views/about.html
@@ -113,7 +113,7 @@
         <div class="row favourite">
           <div class="col-md-6 col-md-offset-3">
             <p>
-              This is Mavis's <a href="https://www.youtube.com/watch?v=9gPktcV0A-g">favourite prank video</a>.  It's not hard to tell what her <a href="">favourite colour shades</a> are. [ one more sentence to come ]
+              This is Mavis's <a href="https://www.youtube.com/watch?v=9gPktcV0A-g">favourite prank video</a>.  It's not hard to tell what her <a href="/img/mavis-fav-colour.png">favourite colour shades</a> are. One word she loves a lot and it's also how she is going to end this paragraph now... DONE.
             </p>
           </div>
         </div>
