--- a/public/less/style.less
+++ b/public/less/style.less
@@ -359,8 +359,13 @@ nav#studiomofo-nav {
 */
 
 #resources-section {
+  padding-bottom: 350px;
   i {
     font-size: 20px;
+    margin-right: 10px;
   }
-  padding-bottom: 300px;
+  ul {
+    list-style-type: none;
+    padding-left: 0;
+  }
 }
