--- a/views/about.html
+++ b/views/about.html
@@ -46,16 +46,22 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-3 col-md-offset-3 text-center">
+        <div class="col-md-4 text-center">
           <p>
             <i class="fa fa-file-text-o"></i>
             <a href="https://mofocomms.etherpad.mozilla.org/ProjectProcess">Project Process</a>
           </p>
         </div>
-        <div class="col-md-3 text-center">
+        <div class="col-md-4 text-center">
           <p>
             <i class="fa fa-file-text-o"></i>
-            <a href="https://mofocomms.etherpad.mozilla.org/ProjectProcessTemplate"> Project Process Template</a>
+            <a href="https://mofocomms.etherpad.mozilla.org/ProjectProcessTemplate">Project Scoping Form</a>
+          </p>
+        </div>
+        <div class="col-md-4 text-center">
+          <p>
+            <i class="fa fa-file-text-o"></i>
+            <a href="https://wiki.mozilla.org/Encyclopedia_Bestpractica">Encylopedia Bestpractica</a>
           </p>
         </div>
       </div>
@@ -113,7 +119,7 @@
         <div class="row favourite">
           <div class="col-md-6 col-md-offset-3">
             <p>
-              This is Mavis's <a href="https://www.youtube.com/watch?v=9gPktcV0A-g">favourite prank video</a>.  It's not hard to tell what her <a href="/img/mavis-fav-colour.png">favourite colour shades</a> are. One word she loves a lot and it's also how she is going to end this paragraph now... DONE.
+              This is Mavis's <a href="https://www.youtube.com/watch?v=9gPktcV0A-g">favourite prank video</a>.  It's not hard to tell what her <a href="/img/mavis-fav-colour.png">favourite colour shades</a> are. One word she loves a lot and it is also how she is going to end this paragraph now... DONE.
             </p>
           </div>
         </div>
