--- a/views/index.html
+++ b/views/index.html
@@ -24,28 +24,6 @@
               <h1 class="text-center">MoFo 2014 Engagement Calendar</h1>
             </div>
           </div>
-          <div class="row">
-            <div class="col-md-6 col-md-offset-3">
-              <ul>
-                <li>
-                  <span class="tier-number tier-1">Tier 1:</span>
-                  Mozilla full-court press, including Firefox channels and snippet.
-                </li>
-                <li>
-                  <span class="tier-number tier-2">Tier 2:</span>
-                  One Mozilla, including Mozilla blog and socials media channels, but not the snippet or Firefox channels.
-                </li>
-                <li>
-                  <span class="tier-number tier-3">Tier 3:</span>
-                  All Foundation audiences via our networks, social media and email lists.
-                </li>
-                <li>
-                  <span class="tier-number tier-4">Tier 4:</span>
-                  Project or region-specific communication, freely employed at the discretion of each team.
-                </li>
-              </ul>
-            </div>
-          </div>
         </div>
       </div>
     </div>
@@ -83,6 +61,30 @@
         </div>
       </div>
     </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          <ul id="tier-description">
+            <li>
+              <span class="tier-number tier-1">Tier 1:</span>
+              Mozilla full-court press, including Firefox channels and snippet.
+            </li>
+            <li>
+              <span class="tier-number tier-2">Tier 2:</span>
+              One Mozilla, including Mozilla blog and socials media channels, but not the snippet or Firefox channels.
+            </li>
+            <li>
+              <span class="tier-number tier-3">Tier 3:</span>
+              All Foundation audiences via our networks, social media and email lists.
+            </li>
+            <li>
+              <span class="tier-number tier-4">Tier 4:</span>
+              Project or region-specific communication, freely employed at the discretion of each team.
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </div>
 
 
@@ -114,6 +116,11 @@
             <input type="submit" value="Submit" class="btn btn-default" />
           </form>
           <p>Questions? Email us anytime at <a href="mailto:studiomofo@mozillafoundation.org">studiomofo@mozillafoundation.org</a></p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12 text-center">
+          [ placeholder ] link to /projects page (in some sort of call-out format)
         </div>
       </div>
     </div>
