--- a/views/resources.html
+++ b/views/resources.html
@@ -17,27 +17,35 @@
       <div class="row header">
         <div class="col-md-8 col-md-offset-2 text-center">
           <h1>Resources</h1>
-          <h2>Here are some tools to improve your engagement strategies.</h2>
+          <h2>Here are some tools from the Enyclopedia Bestpractica to improve your engagement strategies.</h2>
         </div>
       </div>
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-md-4 col-md-offset-4 text-center">
-          <p>
-            <i class="fa fa-file-text-o"></i>
-            <a href="https://wiki.mozilla.org/Encyclopedia_Bestpractica">Encyclopedia Bestpractica</a>
-          </p>
-          <p>
-            A comprehensive guide to the Mozilla Foundation's best practices for communications and engagement.
-          </p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4 col-md-offset-4 text-center">
-          <p>
-            More coming...one day.
-          </p>
+        <div class="col-md-6 col-md-offset-3">
+          <ul>
+            <li>
+              <a href="https://wiki.mozilla.org/Encyclopedia_Bestpractica#Engagement_Team-_Who_We_Are_.26_How_We_Work"><i class="fa fa-file-text-o"></i>The Engagement Team: Who we are and how we work</a>
+            </li>
+            <li>
+              <a href="https://wiki.mozilla.org/Encyclopedia_Bestpractica#Where_to_find_Mozilla_on_Social_Media"><i class="fa fa-file-text-o"></i>Finding Mozilla on social media</a>
+            </li>
+            <li>
+              <a href="https://wiki.mozilla.org/Encyclopedia_Bestpractica#Where_to_find_Mozilla_Brand_Assets"><i class="fa fa-file-text-o"></i>Brand assets</a>
+            </li>
+            <li>
+              <a href="https://wiki.mozilla.org/Encyclopedia_Bestpractica#Top-level_talking_points"><i class="fa fa-file-text-o"></i>Top level talking points</a>
+            </li>
+            <li>
+              <a href="https://wiki.mozilla.org/Encyclopedia_Bestpractica#MoFo_Press_Kit"><i class="fa fa-file-text-o"></i>Mozilla Foundation press kit</a>
+            </li>
+            <li><a href="https://wiki.mozilla.org/Encyclopedia_Bestpractica#.22What_do_I_do_if....22:_Questions_of_Process"><i class="fa fa-file-text-o"></i>"What do I do if...": Questions on process</a>
+            </li>
+            <li>
+              <a href="https://wiki.mozilla.org/Encyclopedia_Bestpractica#What_are_some_external_vendors_we_use.3F"><i class="fa fa-file-text-o"></i>External vendors</a>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
