--- a/views/index.html
+++ b/views/index.html
@@ -38,6 +38,26 @@
             <li>To add your event to this calendar, <a href="mailto: hannah@mozillafoundation.org">email Hannah Kane</a>.</li>
           </ul>
         </div>
+        <div id="tier-description">
+          <ul>
+            <li>
+              <span class="tier-number tier-1">Tier 1:</span>
+              Mozilla full-court press, including Firefox channels and snippet.
+            </li>
+            <li>
+              <span class="tier-number tier-2">Tier 2:</span>
+              One Mozilla, including Mozilla blog and socials media channels, but not the snippet or Firefox channels.
+            </li>
+            <li>
+              <span class="tier-number tier-3">Tier 3:</span>
+              All Foundation audiences via our networks, social media and email lists.
+            </li>
+            <li>
+              <span class="tier-number tier-4">Tier 4:</span>
+              Project or region-specific communication, freely employed at the discretion of each team.
+            </li>
+          </ul>
+        </div>
       </div>
       <div id="right-container">
         <div id="viz-container">
@@ -58,30 +78,6 @@
             <tbody>
             </tbody>
           </table>
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 col-md-offset-3">
-          <ul id="tier-description">
-            <li>
-              <span class="tier-number tier-1">Tier 1:</span>
-              Mozilla full-court press, including Firefox channels and snippet.
-            </li>
-            <li>
-              <span class="tier-number tier-2">Tier 2:</span>
-              One Mozilla, including Mozilla blog and socials media channels, but not the snippet or Firefox channels.
-            </li>
-            <li>
-              <span class="tier-number tier-3">Tier 3:</span>
-              All Foundation audiences via our networks, social media and email lists.
-            </li>
-            <li>
-              <span class="tier-number tier-4">Tier 4:</span>
-              Project or region-specific communication, freely employed at the discretion of each team.
-            </li>
-          </ul>
         </div>
       </div>
     </div>
@@ -120,7 +116,7 @@
       </div>
       <div class="row">
         <div class="col-md-12 text-center">
-          [ placeholder ] link to /projects page (in some sort of call-out format)
+          Curious about what we’re working on? See our current projects <a href="/projects">here</a>.
         </div>
       </div>
     </div>
