--- a/views/projects.html
+++ b/views/projects.html
@@ -49,7 +49,7 @@
         <div class="col-md-3">
           <div class="thumbnail">
             <a href="http://party.webmaker.org/">
-              <img src="img/portfolio/MakerPartySavetheDate_Website.jpg" alt="Maker Party site thumbnail">
+              <img src="img/portfolio/MakerParty_Website.jpg" alt="Maker Party site thumbnail">
             </a>
           </div>
           <div class="title">
@@ -62,7 +62,7 @@
         <div class="col-md-3">
           <div class="thumbnail">
             <a href="http://www.mozilla.org/en-US/gigabit/">
-              <img src="" alt="">
+              <img src="img/portfolio/Gigabit_Website.jpg" alt="Gigabit site thumbnail">
             </a>
           </div>
           <div class="title">
@@ -88,12 +88,12 @@
         <div class="col-md-3">
           <div class="thumbnail">
             <a href="https://bug965980.bugzilla.mozilla.org/attachment.cgi?id=8378651">
-              <img src="" alt="">
+              <img src="img/portfolio/DML_ScienceFair_WebBanner.jpg" alt="DML banner thumbnail">
             </a>
           </div>
           <div class="title">
             <a href="https://bug965980.bugzilla.mozilla.org/attachment.cgi?id=8378651">
-              <h4>DML printed banner</h4>
+              <h4>DML web & print banner</h4>
             </a>
             <p>design</p>
           </div>
@@ -102,13 +102,13 @@
       <div class="row project">
         <div class="col-md-3">
           <div class="thumbnail">
-            <a href="https://www.dropbox.com/s/hgioyviohtn4cur/sciencelab_softwarecarpentry_postcard_v2.pdf">
-              <img src="" alt="">
+            <a href="https://www.dropbox.com/s/ylw15flhae33nub/dml_postcard_savethedate2014_5x7.pdf">
+              <img src="img/portfolio/DMLSaveTheDate_Postcard.jpg" alt="Save the Date postcard thumbnail">
             </a>
           </div>
           <div class="title">
-            <a href="https://www.dropbox.com/s/hgioyviohtn4cur/sciencelab_softwarecarpentry_postcard_v2.pdf">
-              <h4>Science Lab postcard design</h4>
+            <a href="https://www.dropbox.com/s/ylw15flhae33nub/dml_postcard_savethedate2014_5x7.pdf">
+              <h4>Save the Date postcard</h4>
             </a>
             <p>design</p>
           </div>
@@ -116,7 +116,7 @@
         <div class="col-md-3">
           <div class="thumbnail">
             <a href="/#viz-section">
-              <img src="" alt="">
+              <img src="img/portfolio/EngagementCalendar_Vizualization.jpg" alt="Engagement calendar app thumbnail">
             </a>
           </div>
           <div class="title">
@@ -129,7 +129,7 @@
         <div class="col-md-3">
           <div class="thumbnail">
             <a href="https://www.dropbox.com/sh/ar62saes1gwjlk3/VI60iwBF5h/Badgekit_FAQ_Print_nobleedsinglepage_v2.pdf">
-              <img src="" alt="">
+              <img src="img/portfolio/BadgekitFAQ_Handout.jpg" alt="">
             </a>
           </div>
           <div class="title">
@@ -141,11 +141,15 @@
         </div>
         <div class="col-md-3">
           <div class="thumbnail">
-            <img src="" alt="">
+            <a href="https://www.dropbox.com/s/8pynm9t7y0tfky9/sciencelab_softwarecarpentry_banner.pdf">
+              <img src="img/portfolio/ScienceLabSoftwareCarpentry_StandingBanner.jpg" alt="">
+            </a>
           </div>
           <div class="title">
-            <h4></h4>
-            <p></p>
+            <a href="https://www.dropbox.com/s/8pynm9t7y0tfky9/sciencelab_softwarecarpentry_banner.pdf">
+              <h4>Science Lab & SC Banner</h4>
+              <p>design</p>
+            </a>
           </div>
         </div>
       </div>
